# SquirrelJME

./: .authormap  .codebeatignore  .codebeatsettings  .codeclimate.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .kateconfig  .markdownlint.json  .vsconfig  Bootstrap.java  Build.java  Dockerfile  LICENSE  NewBootstrap.java  PULL_REQUEST_TEMPLATE.md  Selection Sort.txt  asruntime.mkd  build.cmd  build.gradle  build.sh  build.xml  building.mkd  cc.squirreljme.SquirrelJME.metainfo.xml  cc.squirreljme.SquirrelJME.yml  changelog.mkd  coc.mkd  code-of-conduct.mkd  commercial.mkd  compatibility.mkd  contrib.mkd  contributing.mkd  credits.mkd  design.mkd  developer-guide.mkd  errors.mkd  gradle.properties  history.mkd  (+22 more)
bvm/: .clang-format  CMakeLists.txt  code-of-conduct.mkd  ctest-to-junit.py  license.mkd
bvm/include/: entry.h  sjmerc.h
bvm/src/: CMakeLists.txt  entry.c
bvm/tests/: CMakeLists.txt  mainEntry.c  testSkip.c  testSuccess.c  tests.h
emulators/emulator-base/: CMakeLists.txt  build.gradle  enable-testing.gradle  internal-shared-test-config.gradle
emulators/emulator-base-native/: .clang-format  .editorconfig  CMakeLists.txt
nanocoat/: .clang-format  .clion-compilers.yaml  .editorconfig  CMakeLists.txt  code-of-conduct.mkd  ctest-to-junit.py  license.mkd  squirreljme_libretro.info
nanocoat/cc/: CMakeLists.txt
nanocoat/cmake/: Doxyfile.in  apple.cmake  assets.cmake  cmake-patch.cmake  distrib.cmake  docker.cmake  doxygen.cmake  easier-includes.cmake  fixes.cmake  hardening.cmake  i-miss-you.cmake  identify-squirreljme-version.cmake  jni.cmake  multilib.cmake  packing.cmake  platform.cmake  pre-fixes.cmake  retro-bundle.cmake  rom-macros-and-functions.cmake  scritchui.cmake  threads.cmake  tryJawt.c  tryJni.c  tryPThread.c  trySNPrintF.c  tryStdArgH.c  tryVSNPrintFA.c  tryVSNPrintFV.c  tryVarArgsH.c  utils.cmake  valgrind.cmake  win32.cmake
nanocoat/frontend/: CMakeLists.txt
nanocoat/lib/: CMakeLists.txt
nanocoat/multiplat/: CMakeLists.txt
nanocoat/rom/: CMakeLists.txt  PLACEHOLDER
nanocoat/src/: CMakeLists.txt  alloc.c  allocSizeOf.c  atomic.c  boot.c  bytecode.c  classy.c  classyVm.c  cleanup.c  comparator.c  debug.c  descriptor.c  dylib.c  error.c  except.c  gfx.c  instance.c  jdwp.c  list.c  loop.c  modelessStars.c  multithread.c  native.c  nvm.c  recycle.c  rom.c  romLibrary.c  romLibraryZip.c  romSuite.c  romSuiteZip.c  seekable.c  softmmio.c  stream.c  stringPool.c  task.c  tread.c  tree.c  util.c  vmConfig.c  zip.c
nanocoat/standard/: CMakeLists.txt
nanocoat/tests/: CMakeLists.txt  basic.c  elevator.c  main.c  tac.c  tacPayload.c  testAlloc.c  testAllocFreeMerge.c  testAllocNoFree.c  testAllocPoolCleanup.c  testAllocRandom.c  testAllocRealloc.c  testAllocReallocRandom.c  testAllocSplit.c  testAllocWeakCounting.c  testAllocWeakDelete.c  testAllocWeakDeleteCancel.c  testAllocWeakEnqueueSetFirst.c  testAllocWeakEnqueueSetSecond.c  testAllocWeakFreeLink.c  testAllocWeakRef.c  testAllocWeakRefNonWeak.c  testAllocWeakRefRef.c  testAtomic.c  testBitStreamRead.c  testBitStreamWrite.c  testByteCodeAALoad.c  testByteCodeAAStore.c  testByteCodeAConstNull.c  testByteCodeANewArray.c  testByteCodeAReturn.c  testByteCodeAThrow.c  testByteCodeArrayLength.c  testByteCodeBALoad.c  testByteCodeBAStore.c  testByteCodeBIPush.c  testByteCodeCALoad.c  testByteCodeCAStore.c  testByteCodeCheckCast.c  testByteCodeD2F.c  (+315 more)
ratufacoat/: .clang-format  .editorconfig  CMakeLists.txt  building.mkd  code-of-conduct.mkd  contributing.mkd  ctest-to-junit.py  license.mkd  makefile  makefile.dos  makefile.palm  makefilelibretro  palm.rcp  palml1.ppm  palml2.ppm  palml8.ppm  palmlh1.ppm  palmlh2.ppm  palmlh8.ppm  palms1.ppm  palms2.ppm  palms8.ppm  palmsh1.ppm  palmsh2.ppm  palmsh8.ppm  ratufac.h  rc_args.c  rc_cpu.c  rc_cpu.h  rc_main.c  rc_mem.c  rc_mem.h  rci_stdc.c  readme.mkd  sjmebsqf.h  sjmecon.h  sjmerc.c  sjmerc.h  sjmercnm.c  sjmercvm.c  (+7 more)
ratufacoat/.sample/: ctest-info.json  ctest-out.xml  junit-out.xml
ratufacoat/cmake/: after-project.Emscripten.cmake  after-project.cmake  after-project.ieee1275.cmake  after-project.ieee1275.sparc.cmake  after-project.palmos.cmake  apple-arch-detect.cmake  built-in-rom.cmake  easier-includes.cmake  macros-and-functions.cmake
ratufacoat/doc/: memtag.mkd
ratufacoat/include/: accelgfx.h  atomic.h  atomiclist.h  audio.h  bootrom.h  btooth.h  builtin.h  cellfunc.h  corefont.h  counter.h  cpu.h  crc.h  datatype.h  debug.h  error.h  function.h  gpio.h  handles.h  ipnet.h  jcharsequence.hxx  jdwp.h  jexception.hxx  jvm.h  libretro.h  lock.h  memchunk.h  memops.h  memory.h  memoryintern.h  native.h  oldstuff.h  opcode.h  random.h  sjmebsqf.h  sjmecon.h  sjmerc.h  sjmevdef.h  softmath.h  stream.h  stringies.h  (+6 more)
ratufacoat/libretro/: Makefile.common  Makefile.common.hostcheck  Makefile.linux-portable_x86  Makefile.linux-portable_x86_64  Makefile.linux_x86  Makefile.linux_x86_64  Makefile.mingw_x86  Makefile.mingw_x86_64  Makefile.osx_x86  Makefile.osx_x86_64  Makefile.ps3_ppc  Makefile.rules  Makefile.vita_arm  Makefile.wii_ppc  Makefile.windows_msvc2005_x86  Makefile.windows_msvc2008_x86  Makefile.windows_msvc2010_x64  Makefile.windows_msvc2010_x86  Makefile.windows_x86  Makefile.windows_x86_64
ratufacoat/src/: CMakeLists.txt  accelgfx.c  accelgfx.cxx  atomic.c  atomic.cxx  atomiclist.c  atomiclist.cxx  audio.c  audio.cxx  bootrom.c  bootrom.cxx  btooth.c  cellfunc.c  cellfunc.cxx  corefont.c  corefont.cxx  counter.c  counter.cxx  cpu.c  cpu.cxx  crc.c  crc.cxx  datatype.c  datatype.cxx  debug.c  debug.cxx  error.c  error.cxx  gpio.c  gpio.cxx  handles.c  handles.cxx  ipnet.c  ipnet.cxx  jcharsequence.cxx  jdwp.c  jdwp.cxx  jexception.cxx  jvm.c  jvm.cxx  (+35 more)
ratufacoat/tests/: CMakeLists.txt  enginestub.c  enginestub.cxx  enginestub.h  jnistub.c  jnistub.h  mainEntry.c  mainEntry.cxx  testAtomic.c  testAtomic.cxx  testBooleanEnumSize.c  testCrc.c  testCrc.cxx  testEngineInit.c  testEngineInit.cxx  testJniMemTags.c  testJniVmNew.c  testJvmInit.c  testJvmInvalid.c  testMemAlloc.c  testMemChunkSub.c  testMemGc.c  (+39 more)
(+21545 files in other folders)
